# SigmaLLM

./: .gitignore  README.md  pyproject.toml
notebooks/: assignment.ipynb
